update publish c2e endpoint. update uui import :hammer:
